--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,4 @@
 {
-    "welcome": "welcome to the blog page!"
+    "welcome": "welcome to the blog page!",
+    "latest_releases": "Latest releases"
 }
