pref: 将video组件修改得更漂亮了

--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -1,4 +1,8 @@
 {
     "welcome": "欢迎来到博客页面！",
-    "latest_releases": "最新发布"
+    "latest_releases": "最新发布",
+    "X_Edge_intro": "X Edge 是一款先进的混合现实产品，提供仿真的地铁驾驶体验。通过逼真的控制台和多样的地铁线路选择，用户可以享受来自世界各地的地铁驾驶乐趣。无论是地铁爱好者还是想要了解地铁驾驶的初学者，X Edge 都能提供沉浸式的学习和娱乐体验，将你带入一个充满可能性的虚拟地铁世界。",
+    "X_Man_intro": "X Man 是一款创新的园林产品，将智能科技与自然环境相融合。它不仅美化和优化园林空间，还可以通过先进的传感技术，检测和分析用户的脑电波、心电图等生理信号。借助这些数据，X Man 能为用户提供个性化的园林体验，促进身心健康，并与周围的自然环境实现和谐共生。无论是休闲、放松还是疗愈，X Man 都让用户在大自然中感受到科技的温度。",
+    "X_Sphere_intro": "X Sphere 是一款突破性的 3D 投影设备，以先进的全息技术为基础，为用户带来沉浸式的视觉体验。无论是在教育、娱乐，还是商业展示领域，它都能投射出高精度的 3D 影像，将想象的场景生动地呈现在现实中。通过简洁优雅的设计和高度互动的功能，X Sphere 将科技与艺术完美融合，为你开启未来世界的全新视角。",
+    "X_Cloud_intro": "X Cloud 是一款融合先进人工智能技术的产品，旨在为用户提供智能化、高效且个性化的服务体验。它利用云计算和 AI 模型，通过分析庞大的数据，实现数据驱动的决策、智能预测和实时优化。在各类业务场景中，X Cloud 可用于自动化数据处理、自然语言理解、图像识别等复杂任务，为企业和个人提供精准、可靠的 AI 支持，将数字化转型提升到一个全新的高度。"
 }
